web/src/App.css
/* * {
  outline: 1px red solid;
} */

h1,
h2,
h3,
h4,
h5 {
  margin-top: auto;
  margin-bottom: auto;
}

html,
body {
  background-color: rgb(58, 57, 57);
  color: #c6c6c6;
}

.App {
  font-family: "Trebuchet MS";
}

.container {
  margin: auto;
  margin-top: 24px;
  max-width: 500px;
  display: flex;
  flex-direction: column;
  gap: 12px;
}

.header {
  margin: auto;
}

.header > img {
  filter: invert(0.8);
}

.spinner {
  aspect-ratio: 1;
  width: 100px;
  border: 5px #ffffff1a solid;
  border-top: 5px #d9ce83 solid;
  border-radius: 50%;
  margin: auto;
  margin-top: 60px;
  animation: spin;
  animation-duration: 1s;
  animation-iteration-count: infinite;
}

@keyframes spin {
  from {
    transform: rotate(0);
  }
  to {
    transform: rotate(360deg);
  }
}

.users {
  border: 2px #ffffff1a solid;
  border-radius: 6px;
  padding: 8px;
  display: flex;
  flex-direction: column;
  gap: 4px;
}

.users-header {
  margin-bottom: 4px;
}

.user {
  border: 2px #ffffff1a solid;
  border-radius: 4px;
  padding: 8px;
  display: grid;
  grid-template-columns: 2fr 1fr 1fr;
}

.user-name {
  grid-column: 1 / 2;
}

.user-ip-address {
  grid-column: 2 / 3;
}

.user-delete-button {
  margin-left: auto;
  cursor: pointer;
}

.add-user-form {
  display: grid;
  grid-template-columns: 2fr 1fr 1fr;
  gap: 8px;
  padding: 8px;
  border: 2px #ffffff1a solid;
  border-radius: 4px;
}

.add-user-name,
.add-user-ip-address {
  border-radius: 4px;
  background-color: #ffffff1a;
  color: white;
  height: 24px;
}

.add-user-name {
  grid-column: 1 / 2;
  max-width: 150px;
}

.add-user-ip-address {
  grid-column: 2 / 3;
  max-width: 100px;
}

.form-valid {
  border: 2px rgba(49, 117, 49, 0.411) solid;
}

.form-invalid {
  border: 2px rgba(211, 57, 57, 0.539) solid;
  background-color: rgba(211, 57, 57, 0.228);
}

.add-user-button {
  margin-left: auto;
  background-color: rgba(135, 135, 135, 0.47);
  color: #c6c6c6;
  border: 2px #ffffff1a solid;
  border-radius: 4px;
  cursor: pointer;
}

.instance {
  border: 2px #ffffff1a solid;
  border-radius: 6px;
  padding: 8px;
}

.instance-header {
  display: flex;
  justify-content: space-between;
  align-items: center;
  margin-bottom: 8px;
}

.server-list {
  display: flex;
  flex-direction: column;
  gap: 4px;
}

.server {
  border: 2px #ffffff1a solid;
  border-radius: 4px;
  padding: 6px;
}

.server-header {
  display: flex;
}

.server-header > h3 {
  padding-left: 16px;
}

.server-state {
  height: 24px;
  aspect-ratio: 1;
  border-radius: 50%;
  border: 2px #ffffff1a solid;
  display: grid;
  place-items: center;
}

.server-details {
  padding-top: 8px;
}

.running {
  color: rgb(78, 128, 49);
}

.server-actions {
  display: flex;
  justify-content: flex-end;
}

.state-button {
  color: #c6c6c6;
  background-color: rgb(76, 76, 149);
  border: none;
  border-radius: 4px;
  padding-top: 6px;
  padding-bottom: 6px;
  width: 150px;
  cursor: pointer;
  margin-left: auto;
}

